--- a/Testy/MainWindow.xaml
+++ b/Testy/MainWindow.xaml
@@ -1,10 +1,13 @@
 ﻿<Window x:Class="Testy.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Testy" Height="350" Width="525">
-    <Grid>
-        <Label Content="Najlepszy wynik: 0" Name="wynik" FontSize="28" Margin="134,10,134,252"/>
-        <Button Content="Rozwiąż test" FontSize="36" Margin="120,108,134,131"/>
-        <Button Content="Dodaj pytanie" FontSize="24" Margin="134,236,152,30"/>
-    </Grid>
+        Title="Testy" Height="350" Width="550">
+    <StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="15">
+            <Label Content="Najlepszy wynik: " FontSize="28"/>
+            <Label Content="0" Name="Label_wynik" FontSize="28"/>
+        </StackPanel>
+        <Button Content="Rozwiąż test" FontSize="36" Width="500" Margin="5,40" HorizontalAlignment="Center"/>
+        <Button Content="Dodaj pytanie" FontSize="24" Width="400" HorizontalAlignment="Center"/>
+    </StackPanel>
 </Window>
