--- a/Testy/NewQuestion.xaml
+++ b/Testy/NewQuestion.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Testy.NewQuestion"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Wprowadź nowe pytanie" Height="300" Width="300">
+        Title="Wprowadź nowe pytanie" Height="300" Width="300" WindowStartupLocation="CenterScreen">
     <StackPanel>
         <TextBox Name="Text_TextBox" TextWrapping="Wrap" Text="Tu wpisz treść pytania." Padding="5" Height="120"/>
         <GridSplitter HorizontalAlignment="Stretch" Height="1"/>
@@ -22,6 +22,9 @@
             <TextBox Name="AnswerD_TextBox" Height="23" Text="Podaj błędną odpowiedź." HorizontalAlignment="Stretch" Margin=" 0,0,5,0"/>
         </DockPanel>
         <GridSplitter HorizontalAlignment="Stretch" Height="1"/>
-        <Button Content="Dodaj pytanie" Margin="10" Click="Button_Dodaj_Click"/>
+        <DockPanel>
+            <Button Content="Dodaj pytanie" Margin="6" Padding="20,2,20,2" Click="Button_Dodaj_Click" HorizontalAlignment="Left"/>
+            <Button Content="Zakończ" Margin="6" Padding="2" Click="Button_Zakoncz_Click" HorizontalAlignment="Right" HorizontalContentAlignment="Center"/>
+        </DockPanel>
     </StackPanel>
 </Window>
