--- a/Testy/Test.xaml
+++ b/Testy/Test.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Testy.Test"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Test" Height="300" Width="300">
+        Title="Test" Height="300" Width="300" WindowStartupLocation="CenterScreen">
     <StackPanel>
         <TextBlock Name="Text_TextBlock" TextWrapping="Wrap" Text="Przykładowe pytanie zawierało się będzie w tym miejscu." Padding="5" Height="120"/>
         <GridSplitter HorizontalAlignment="Stretch" Height="1"/>
@@ -15,7 +15,7 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="C." FontWeight="Bold" Width="25"/>
-            <RadioButton Name="AnswerC" Content="Odpowiedź" GroupName="Answers" Margin="0,5"/>
+            <RadioButton x:Name="AnswerC" Content="Odpowiedź" GroupName="Answers" Margin="0,5"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal">
             <Label Content="D." FontWeight="Bold" Width="25"/>
@@ -23,9 +23,9 @@
         </StackPanel>
         <GridSplitter HorizontalAlignment="Stretch" Height="1"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
-            <Button Content="Poprzednie" Margin="5" Width="75"/>
-            <Button Content="Zakończ" Margin="5" Width="75"/>
-            <Button Content="Następne" Margin="5" Width="75"/>
+            <Button x:Name="Button_Poprzednie" Content="Poprzednie" Margin="5" Width="75" Click="Button_Poprzednie_Click"/>
+            <Button Content="Zakończ" Margin="5" Width="75" Click="Button_Zakoncz_Click"/>
+            <Button x:Name="Button_Nastepne" Content="Następne" Margin="5" Width="75" Click="Button_Nastepne_Click"/>
         </StackPanel>
     </StackPanel>
 </Window>
