--- a/Testy/Results.xaml
+++ b/Testy/Results.xaml
@@ -1,15 +1,18 @@
 ﻿<Window x:Class="Testy.Results"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Wynik" Height="150" Width="300" WindowStartupLocation="CenterScreen">
+        Title="Wynik" Height="160" Width="300" WindowStartupLocation="CenterScreen">
     <StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
             <Label Content="Twój wynik to:" FontSize="22"/>
             <Label Name="Label_Result" Content="0" FontSize="22"/>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="5">
-            <Button Content="Rozwiąż kolejny test" Padding="3" Margin="5" Click="Button_Rozwiaz_Click"/>
-            <Button Content="Zakończ" Padding="3" Margin="5" Click="Button_Zakoncz_Click"/>
+            <Button Content="Rozwiąż kolejny test" Padding="3" Margin="5" Click="Button_Rozwiaz_Click" ToolTip="Zacznij nowy test z nowymi pytaniami"/>
+            <Button Content="Zakończ" Padding="3" Margin="5" Click="Button_Zakoncz_Click" ToolTip="Wróć do menu glównego"/>
+        </StackPanel>
+        <StackPanel>
+            <Button Content="Drukuj" Width="100" ToolTip="Wydrukuj test, który przed chwilą rozwiązywałeś" Click="Button_Drukuj_Click"/>
         </StackPanel>
     </StackPanel>
 </Window>
